--- a/anti_patterns/deny-warnings.html
+++ b/anti_patterns/deny-warnings.html
@@ -142,8 +142,7 @@
 <p>A well-intentioned crate author wants to ensure their code builds without
 warnings. So they annotate their crate root with the following:</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust edition2018"><span class="boring">#![allow(unused)]
 </span>#![deny(warnings)]
 
 <span class="boring">fn main() {
