--- a/idioms/concat-format.html
+++ b/idioms/concat-format.html
@@ -144,8 +144,7 @@ mutable <code>String</code>, or using its <code>+</code> operator. However, it i
 convenient to use <code>format!</code>, especially where there is a mix of literal and
 non-literal strings.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust edition2018"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>fn say_hello(name: &amp;str) -&gt; String {
     // We could construct the result string manually.
