--- a/idioms/pass-var-to-closure.html
+++ b/idioms/pass-var-to-closure.html
@@ -146,8 +146,7 @@ perform some other transformation.</p>
 <p>Use variable rebinding in separate scope for that.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>Use</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust edition2018"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>use std::rc::Rc;
 
@@ -165,8 +164,7 @@ let closure = {
 <span class="boring">}
 </span></code></pre></pre>
 <p>instead of</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust edition2018"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>use std::rc::Rc;
 
