--- a/patterns/creational/builder.html
+++ b/patterns/creational/builder.html
@@ -141,8 +141,7 @@
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Construct an object with calls to a builder helper.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
+<pre><pre class="playground"><code class="language-rust edition2018"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>#[derive(Debug, PartialEq)]
 pub struct Foo {
